--- a/fingaimbot.html
+++ b/fingaimbot.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fingroup - Kezdőlap</title>
+    <title>Fingroup - FingAimbot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/1565958858.js" crossorigin="anonymous"></script>
@@ -47,6 +47,24 @@
           </div>
         </div>
       </nav>
+      <div class="fing2">
+      <div class="row">
+      <div class="col">
+        <div class="fingfing2">
+      <h1>FingAimbot, Egy játék segédprogram</h1>
+      <br>
+      <p>Egy Fortnite, CS:2, Rust program, amely segít a szar aim-on. <br>Töltsd le most &nbsp<span class="skib"><i class="fa-brands fa-windows"></i>&nbspWindowsra!</p></span>
+      <div class="btn-group" role="group">
+      <button type="button" class="btn btn-outline-warning" onclick="window.location.href='https://www.youtube.com/watch?v=xvFZjo5PgG0'"><i class="fa-solid fa-download"></i> &nbspLetöltés </button>
+      <button type="button" class="btn btn-outline-danger"  onclick="window.location.href='https://www.youtube.com/watch?v=xvFZjo5PgG0'"><i class="fa-solid fa-download"></i> &nbspLetöltés (Beta)</button>
+    </div>
+    <br><br><p style="color: rgb(61, 61, 61);">Stabil Verzió: <span style="color: #ffc107;">v5.64</span><br>Beta Verzió: <span style="color: #dc3545;">v5.96</span></p>
+    </div>
+      </div>
+      <div class="col">
+        <img src="fingaimbot.png" alt="fingaimbot" class="fing3">
+      </div> 
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
