--- a/forantos.html
+++ b/forantos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fingroup - Kezdőlap</title>
+    <title>Fingroup - ForántOS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/1565958858.js" crossorigin="anonymous"></script>
@@ -47,6 +47,25 @@
           </div>
         </div>
       </nav>
+      <div class="fing2">
+      <div class="row">
+      <div class="col">
+        <div class="fingfing2">
+      <h1>ForántOS, egy alternatív FingOS</h1>
+      <br>
+      <p>Egy másik operációs rendszer, mint a FingOS, amely a Windowsra épül. Azoknak készült, akik utálják a Linuxot</span>
+      <div class="btn-group" role="group">
+      <button type="button" class="btn btn-outline-secondary disabled">Stabil Verzió (v1.9)</button>
+      <button type="button" class="btn btn-outline-primary"  onclick="alert('NINCS KESZ TE CIGANY!!!!');"><i class="fa-solid fa-download"></i> &nbspLetöltés</button>
+    </div>
+    <br><br><br>
+    </div>
+      </div>
+      <div class="col">
+        <img src="forantos.png" alt="forantos" class="fing3">
+      </div> 
+      </div>
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
