--- a/forantos.html
+++ b/forantos.html
@@ -48,24 +48,68 @@
         </div>
       </nav>
       <div class="fing2">
+        <div class="row">
+          <div class="col-6">
+            <div class="fingfing2">
+              <h1><span style="color: rgb(0, 119, 255);">ForántOS</span>, egy alternatív <span style="color: #FFA800;">FingOS</span></h1>
+                <br>
+              <p>Egy másik operációs rendszer, mint a FingOS, amely a Windowsra épül. Azoknak készült, akik utálják a Linuxot</span><br><br>
+              <button type="button" class="btn btn-outline-primary"  onclick="alert('NINCS KESZ TE CIGANY!!!!');"><i class="fa-solid fa-download"></i> &nbspLetöltés (v0.0)</button>
+              <br><br><br>
+            </div>
+          </div>
+          <div class="col-6">
+            <img src="forantos.png" alt="forantos" class="fing3">
+          </div> 
+        </div>
+      </div>
+      <div class="MarcusRashford">
+        <div class="row">
+          <div class="col-12">
+            <div class="fingfing44">
+              <div style="text-align: center;">
+                <h1><span style="color: rgb(74, 83, 90);">Egy ismerős asztal</span><br><span style="color: rgb(220, 221, 226);">amelyet már tudod, hogyan kell használni.</span></h1>
+                <br><p><span style="color: rgb(0, 140, 255);"><i class="fa-brands fa-windows"></i>&nbspWindows 10, 11</span>-re épült, amelyet a világ <span style="color: rgb(0, 255, 64);">87%</span>-a használ.</p>
+              </div>  
+                <br>
+            </div>
+          </div>
+          <div class="col-12">
+            <img src="forantoswindows.png" alt="forantos" class="fing3">
+          </div> 
+        </div>
+      </div>
+      <div class="MarcusRashford">
+        <div class="row">
+          <div class="col-6">
+            <img src="optimization.png" alt="forantos" class="fing3" style="width: 80%;">
+          </div>
+          <div class="col-6">
+            <div class="FreakyAhh">
+              <h1>Teljesen optimalizálva</h1>
+                <br>
+              <p>Érkezik optimalizáló programokkal, GPU-driverekkel, böngészőkkel, kommunikációs programokkal.</span><br><br>
+              <br><br><br>
+            </div>
+          </div> 
+        </div>
+      </div>
+    <div class="MarcusRashford">
       <div class="row">
-      <div class="col">
-        <div class="fingfing2">
-      <h1>ForántOS, egy alternatív FingOS</h1>
-      <br>
-      <p>Egy másik operációs rendszer, mint a FingOS, amely a Windowsra épül. Azoknak készült, akik utálják a Linuxot</span>
-      <div class="btn-group" role="group">
-      <button type="button" class="btn btn-outline-secondary disabled">Stabil Verzió (v1.9)</button>
-      <button type="button" class="btn btn-outline-primary"  onclick="alert('NINCS KESZ TE CIGANY!!!!');"><i class="fa-solid fa-download"></i> &nbspLetöltés</button>
-    </div>
-    <br><br><br>
-    </div>
+        <div class="col-6">
+          <div class="fingfing2">
+            <h1>ForántOS, egy alternatív FingOS</h1>
+              <br>
+            <p>Egy másik operációs rendszer, mint a FingOS, amely a Windowsra épül. Azoknak készült, akik utálják a Linuxot</span><br><br>
+            <button type="button" class="btn btn-outline-primary"  onclick="alert('NINCS KESZ TE CIGANY!!!!');"><i class="fa-solid fa-download"></i> &nbspLetöltés (v0.0)</button>
+            <br><br><br>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="forantos.png" alt="forantos" class="fing3">
+        </div> 
       </div>
-      <div class="col">
-        <img src="forantos.png" alt="forantos" class="fing3">
-      </div> 
-      </div>
-      
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
