--- a/info.html
+++ b/info.html
@@ -47,13 +47,25 @@
           </div>
         </div>
       </nav>
-      <div class="fing2"><h1>A Weboldalról</h1>
+      <div class="fing2">
+        <div class="row">
+          <div class="col-6">
+            <div class="TrentAlexander-Arnold">
+      <h1>A Weboldalról</h1>
       <br>
-      <h5><strong>Bootstrap verzió:</strong> v5.3.5 (CDN)</h5>
-      <h5><strong>Host:</strong>  GitHub Pages</h5>
-      <h5><strong>Weboldal keszítő:</strong> SusTophat</h5>
-      <h5><strong>Fonts:</strong> Product Sans (Google)</h5>
-      <h5><strong>Icons:</strong> Font Awesome</h5>
+      <h5><span class="bold">Bootstrap version</span>: v5.3.5 (CDN)</h5>
+      <h5><span class="bold">Host</span>: GitHub Pages</h5>
+      <h5><span class="bold">Website Creator</span>: SusTophat</h5>
+      <h5><span class="bold">Fonts</span>: Product Sans (Google)</h5>
+      <h5><span class="bold">Icons</span>: Font Awesome</h5>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="SergioRamos">
+          <img src="info.png" style="width: 42%;">
+            </div>
+          </div>
+        </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
