--- a/fingaimbot.html
+++ b/fingaimbot.html
@@ -28,7 +28,7 @@
                   Projektunk
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">FingOS</a></li>
+                  <li><a class="dropdown-item" href="https://projektfingos.github.io">FingOS</a></li>
                   <li><a class="dropdown-item" href="forantos.html">ForántOS</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="fingaimbot.html">FingAimbot</a></li>
@@ -39,10 +39,10 @@
             </ul>
             <form class="d-flex" role="search">
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-outline-primary"><i class="fa-brands fa-discord"></i></button>
-                    <button type="button" class="btn btn-outline-warning"><i class="fa-brands fa-tiktok"></i></button>
-                    <button type="button" class="btn btn-outline-danger"><i class="fa-brands fa-youtube"></i></button>
-                  </div>
+                    <button type="button" class="btn btn-outline-primary" onclick="window.location.href='https://discord.gg/4mhSGQd7CQ'"><i class="fa-brands fa-discord"></i></button>
+                    <button type="button" class="btn btn-outline-warning" onclick="window.location.href='http://tiktok.com/@fingroup0'"><i class="fa-brands fa-tiktok"></i></button>
+                    <button type="button" class="btn btn-outline-danger" onclick="window.location.href='https://www.youtube.com/@Marcigt-qe1ow'"><i class="fa-brands fa-youtube"></i></button>
+                </div>
             </form>
           </div>
         </div>
