--- a/forantos.html
+++ b/forantos.html
@@ -28,7 +28,7 @@
                   Projektunk
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">FingOS</a></li>
+                  <li><a class="dropdown-item" href="https://projektfingos.github.io">FingOS</a></li>
                   <li><a class="dropdown-item" href="forantos.html">ForántOS</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="fingaimbot.html">FingAimbot</a></li>
@@ -38,11 +38,11 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-outline-primary"><i class="fa-brands fa-discord"></i></button>
-                    <button type="button" class="btn btn-outline-warning"><i class="fa-brands fa-tiktok"></i></button>
-                    <button type="button" class="btn btn-outline-danger"><i class="fa-brands fa-youtube"></i></button>
-                  </div>
+              <div class="btn-group" role="group">
+                <button type="button" class="btn btn-outline-primary" onclick="window.location.href='https://discord.gg/4mhSGQd7CQ'"><i class="fa-brands fa-discord"></i></button>
+                <button type="button" class="btn btn-outline-warning" onclick="window.location.href='http://tiktok.com/@fingroup0'"><i class="fa-brands fa-tiktok"></i></button>
+                <button type="button" class="btn btn-outline-danger" onclick="window.location.href='https://www.youtube.com/@Marcigt-qe1ow'"><i class="fa-brands fa-youtube"></i></button>
+              </div>
             </form>
           </div>
         </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="col-6">
             <div class="FreakyAhh">
-              <h1>Teljesen optimalizálva</h1>
+              <h1>Teljesen <span style="color: #C30E0E;">optimalizálva.</span></h1>
                 <br>
               <p>Érkezik optimalizáló programokkal, GPU-driverekkel, böngészőkkel, kommunikációs programokkal.</span><br><br>
               <br><br><br>
@@ -98,18 +98,36 @@
       <div class="row">
         <div class="col-6">
           <div class="fingfing2">
-            <h1>ForántOS, egy alternatív FingOS</h1>
+            <h1><span style="color: rgb(74, 83, 90);">Játékra</span> készült.</h1>
               <br>
-            <p>Egy másik operációs rendszer, mint a FingOS, amely a Windowsra épül. Azoknak készült, akik utálják a Linuxot</span><br><br>
-            <button type="button" class="btn btn-outline-primary"  onclick="alert('NINCS KESZ TE CIGANY!!!!');"><i class="fa-solid fa-download"></i> &nbspLetöltés (v0.0)</button>
+            <p>Játssz az összes Windows-játékoddal a <a href="https://store.steampowered.com/" style="color: #1483B4; text-decoration: none;">Steam</a>, <a href="https://epicgames.com" style="color: rgb(74, 83, 90); text-decoration: none;">Epic Games</a>, <a href="https://www.rockstargames.com/" style="color: #FFA800;; text-decoration: none;">Rockstar Launcher</a> és még sok más játék launcheren!</span><br><br>
             <br><br><br>
           </div>
         </div>
         <div class="col-6">
-          <img src="forantos.png" alt="forantos" class="fing3">
+          <img src="games.png" alt="forantos" class="fing33">
         </div> 
       </div>
     </div>
+    <footer>
+      <div class="row">
+        <div class="col-6">
+          <div class="fingfing2">
+            <img src="fing.png" alt="" style="width: 25%;">
+              <br><br>
+            <p style="color: rgb(56, 56, 56);">Steam is a legal trademark of Valve Corporation.<br>Rockstar Games is a legal trademark of Take-Two Interactive.<br>Epic Games is a legal trademark of Epic Games, Inc.</p><br>
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-outline-primary"><i class="fa-brands fa-discord"></i></button>
+              <button type="button" class="btn btn-outline-warning"><i class="fa-brands fa-tiktok"></i></button>
+              <button type="button" class="btn btn-outline-danger"><i class="fa-brands fa-youtube"></i></button>
+          </div>
+            <br><br><br>
+          </div>
+        </div>
+        <div class="col-6">
+        </div> 
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
