--- a/forantos.html
+++ b/forantos.html
@@ -115,7 +115,7 @@
           <div class="fingfing2">
             <img src="fing.png" alt="" style="width: 200px">
               <br><br>
-            <p style="color: rgb(56, 56, 56);">Steam is a legal trademark of Valve Corporation.<br>Rockstar Games is a legal trademark of Take-Two Interactive.<br>Epic Games is a legal trademark of Epic Games, Inc.</p><br>
+            <p style="color: rgb(56, 56, 56);">Készitette SusTophat<br><br>Steam is a legal trademark of Valve Corporation.<br>Rockstar Games is a legal trademark of Take-Two Interactive.<br>Epic Games is a legal trademark of Epic Games, Inc.</p><br>
             <div class="btn-group" role="group">
               <button type="button" class="btn btn-outline-primary" onclick="window.location.href='https://discord.gg/4mhSGQd7CQ'"><i class="fa-brands fa-discord"></i></button>
               <button type="button" class="btn btn-outline-warning" onclick="window.location.href='http://tiktok.com/@fingroup0'"><i class="fa-brands fa-tiktok"></i></button>
