--- a/forantos.html
+++ b/forantos.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="fing.png" alt="fing" width="120px" height="30px"></a>
+          <a class="navbar-brand" href="#"><img src="photos/icons&logos/fing.png" alt="fing" width="120px" height="30px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,7 +21,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Kezdőlap</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tagok</a>
+                <a class="nav-link" href="tagok.html">Tagok</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -59,7 +59,7 @@
             </div>
           </div>
           <div class="col-6">
-            <img src="forantos.png" alt="forantos" class="fing3">
+            <img src="photos/forantos/forantos.png" alt="forantos" class="fing3">
           </div> 
         </div>
       </div>
@@ -75,14 +75,14 @@
             </div>
           </div>
           <div class="col-12">
-            <img src="forantoswindows.png" alt="forantos" class="fing3">
+            <img src="photos/forantos/forantoswindows.png" alt="forantos" class="fing3">
           </div> 
         </div>
       </div>
       <div class="MarcusRashford">
         <div class="row">
           <div class="col-6">
-            <img src="optimization.png" alt="forantos" class="fing3" style="width: 80%;">
+            <img src="photos/icons&logos/optimization.png" alt="forantos" class="fing3" style="width: 80%;">
           </div>
           <div class="col-6">
             <div class="FreakyAhh">
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="games.png" alt="forantos" class="fing33">
+          <img src="photos/forantos/games.png" alt="forantos" class="fing33">
         </div> 
       </div>
     </div>
@@ -113,9 +113,9 @@
       <div class="row">
         <div class="col-6">
           <div class="fingfing2">
-            <img src="fing.png" alt="" style="width: 200px">
+            <img src="photos/icons&logos/fing.png" alt="" style="width: 200px">
               <br><br>
-            <p style="color: rgb(56, 56, 56);">Készitette SusTophat<br><br>Steam is a legal trademark of Valve Corporation.<br>Rockstar Games is a legal trademark of Take-Two Interactive.<br>Epic Games is a legal trademark of Epic Games, Inc.</p><br>
+            <p style="color: rgb(56, 56, 56);">Készitette SusTophat<br><br>Fingroup Website Beta.<br>Powered by <span style="color: crimson;">Metal</span><span style="color: rgb(131, 12, 36);">TSR</span></p><br>
             <div class="btn-group" role="group">
               <button type="button" class="btn btn-outline-primary" onclick="window.location.href='https://discord.gg/4mhSGQd7CQ'"><i class="fa-brands fa-discord"></i></button>
               <button type="button" class="btn btn-outline-warning" onclick="window.location.href='http://tiktok.com/@fingroup0'"><i class="fa-brands fa-tiktok"></i></button>
