--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="fing.png" alt="fing" width="120px" height="30px"></a>
+          <a class="navbar-brand" href="#"><img src="photos/icons&logos/fing.png" alt="fing" width="120px" height="30px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,7 +21,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Kezdőlap</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tagok</a>
+                <a class="nav-link" href="tagok.html">Tagok</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle  active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -53,19 +53,41 @@
             <div class="TrentAlexander-Arnold">
       <h1>A Weboldalról</h1>
       <br>
-      <h5><span class="bold">Bootstrap version</span>: v5.3.5 (CDN)</h5>
+      <h5><span class="bold">Bootstrap verzió</span>: v5.3.5 (CDN)</h5>
       <h5><span class="bold">Host</span>: GitHub Pages</h5>
       <h5><span class="bold">Website Creator</span>: SusTophat</h5>
       <h5><span class="bold">Fonts</span>: Product Sans (Google)</h5>
-      <h5><span class="bold">Icons</span>: Font Awesome</h5>
+      <h5><span class="bold">Icons</span>: Font Awesome</h5><br><br>
+      <h5 style="color: #FFA800"><i class="fa-solid fa-triangle-exclamation"></i> &nbspA weboldal fejlesztés alatt áll.<br>Jelenleg a béta verziót látja.</h5>
             </div>
           </div>
           <div class="col-6">
             <div class="SergioRamos">
-          <img src="info.png" style="width: 42%;">
+          <img src="photos/icons&logos/info.png" style="width: 42%;">
             </div>
           </div>
         </div>
+      </div>
+      <div class="figmus">
+      <footer>
+        <div class="row">
+          <div class="col-6">
+            <div class="fingfing2">
+              <img src="photos/icons&logos/fing.png" alt="" style="width: 200px">
+                <br><br>
+              <p style="color: rgb(56, 56, 56);">Készitette SusTophat<br><br>Fingroup Website Beta.<br>Powered by <span style="color: crimson;">Metal</span><span style="color: rgb(131, 12, 36);">TSR</span></p><br>
+              <div class="btn-group" role="group">
+                <button type="button" class="btn btn-outline-primary" onclick="window.location.href='https://discord.gg/4mhSGQd7CQ'"><i class="fa-brands fa-discord"></i></button>
+                <button type="button" class="btn btn-outline-warning" onclick="window.location.href='http://tiktok.com/@fingroup0'"><i class="fa-brands fa-tiktok"></i></button>
+                <button type="button" class="btn btn-outline-danger" onclick="window.location.href='https://www.youtube.com/@Marcigt-qe1ow'"><i class="fa-brands fa-youtube"></i></button>
+            </div>
+              <br><br><br>
+            </div>
+          </div>
+          <div class="col-6">
+          </div> 
+        </div>
+      </footer>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
