--- a/tagok.html
+++ b/tagok.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="fing.png" alt="fing" width="120px" height="30px"></a>
+          <a class="navbar-brand" href="#"><img src="photos/icons&logos/fing.png" alt="fing" width="120px" height="30px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,7 +21,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Kezdőlap</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tagok</a>
+                <a class="nav-link" href="tagok.html">Tagok</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,6 +47,70 @@
           </div>
         </div>
       </nav>
+      <div class="fing2">
+        <h1>Cégvezetők</h1><br>
+          <div class="row">
+            <div class="col-3">
+              <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+                <img src="photos/pfp/marcigt.png" class="card-img-top" alt="marcigt">
+                <div class="card-body">
+                  <h3>Marcigt</h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+              <img src="photos/pfp/sustophat.png" class="card-img-top" alt="sustophat">
+              <div class="card-body">
+                <h3>SusTophat</h3>
+              </div>
+            </div>  
+          </div>
+        </div>
+        <br><br>
+        <h1>Cégfejlesztők</h1><br>
+          <div class="row">
+            <div class="col-3">
+              <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+                <img src="photos/pfp/j4n1.png" class="card-img-top" alt="j4n1">
+                <div class="card-body">
+                  <h3>J4n1</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <br><br><h1>Tagok</h1><br>
+          <div class="row">
+            <div class="col-3">
+              <div class="card text-bg-dark mb-3" style="max-width: 18rem;">
+                <img src="photos/pfp/default.png" class="card-img-top" alt="j4n1">
+                <div class="card-body">
+                  <h3>TituszEzredes</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <footer>
+          <div class="row">
+            <div class="col-6">
+              <div class="fingfing2">
+                <img src="photos/icons&logos/fing.png" alt="" style="width: 200px">
+                  <br><br>
+                <p style="color: rgb(56, 56, 56);">Készitette SusTophat<br><br>Fingroup Website Beta.<br>Powered by <span style="color: crimson;">Metal</span><span style="color: rgb(131, 12, 36);">TSR</span></p><br>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-outline-primary" onclick="window.location.href='https://discord.gg/4mhSGQd7CQ'"><i class="fa-brands fa-discord"></i></button>
+                  <button type="button" class="btn btn-outline-warning" onclick="window.location.href='http://tiktok.com/@fingroup0'"><i class="fa-brands fa-tiktok"></i></button>
+                  <button type="button" class="btn btn-outline-danger" onclick="window.location.href='https://www.youtube.com/@Marcigt-qe1ow'"><i class="fa-brands fa-youtube"></i></button>
+              </div>
+                <br><br><br>
+              </div>
+            </div>
+            <div class="col-6">
+            </div> 
+          </div>
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
