--- a/forantos.html
+++ b/forantos.html
@@ -23,6 +23,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="tagok.html">Tagok</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="hirek.html">Hírek</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Projektunk
