--- a/hirek.html
+++ b/hirek.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fingroup - Kezdőlap</title>
+    <title>Fingroup - Tagok</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/1565958858.js" crossorigin="anonymous"></script>
@@ -18,13 +18,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Kezdőlap</a>
+                <a class="nav-link" aria-current="page" href="index.html">Kezdőlap</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="tagok.html">Tagok</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="hirek.html">Hírek</a>
+                <a class="nav-link active" href="hirek.html">Hírek</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,6 +50,36 @@
           </div>
         </div>
       </nav>
+      <div class="fing2">
+        <h1>Hírek</h1><br>
+        <div class="card mb-3  text-bg-dark">
+          <img src="photos/icons&logos/fingroup.png" class="card-img-top" alt="fingroup">
+          <div class="card-body">
+            <h5 class="card-title">Elindult a Fingroup weboldala!</h5>
+            <p class="card-text">59 év után... végre elkészült a Fingroup honlapja!</p>
+            <p class="card-text"><small class="text-body-secondary"><span style="color: rgb(220, 221, 226);">Csütörtök, Május 5. 2025</span></small></p>
+          </div>
+        </div>
+      </div>
+        <footer>
+          <div class="row">
+            <div class="col-6">
+              <div class="fingfing2">
+                <img src="photos/icons&logos/fing.png" alt="" style="width: 200px">
+                  <br><br>
+                <p style="color: rgb(56, 56, 56);">Készitette SusTophat<br><br>Fingroup Website Beta.<br>Powered by <span style="color: crimson;">Metal</span><span style="color: rgb(131, 12, 36);">TSR</span></p><br>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-outline-primary" onclick="window.location.href='https://discord.gg/4mhSGQd7CQ'"><i class="fa-brands fa-discord"></i></button>
+                  <button type="button" class="btn btn-outline-warning" onclick="window.location.href='http://tiktok.com/@fingroup0'"><i class="fa-brands fa-tiktok"></i></button>
+                  <button type="button" class="btn btn-outline-danger" onclick="window.location.href='https://www.youtube.com/@Marcigt-qe1ow'"><i class="fa-brands fa-youtube"></i></button>
+              </div>
+                <br><br><br>
+              </div>
+            </div>
+            <div class="col-6">
+            </div> 
+          </div>
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   </body>
 </html>
