--- a/tagok.html
+++ b/tagok.html
@@ -18,10 +18,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Kezdőlap</a>
+                <a class="nav-link" aria-current="page" href="index.html">Kezdőlap</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tagok.html">Tagok</a>
+                <a class="nav-link active" href="tagok.html">Tagok</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="hirek.html">Hírek</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
